[gd_scene load_steps=8 format=2]

[ext_resource path="res://hud/wood_theme.tres" type="Theme" id=1]
[ext_resource path="res://hud/upgrade_menu/UpgradeEntry.gd" type="Script" id=2]
[ext_resource path="res://hud/upgrade_menu/tierpanel.png" type="Texture" id=3]
[ext_resource path="res://hud/upgrade_menu/tierpanel/tierpanel_letters-sheet.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_bottom = 6.0
bg_color = Color( 1, 0.929412, 0.764706, 0 )
border_width_bottom = 3
border_color = Color( 0.952941, 0.905882, 0.768627, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 2.0

[node name="UpgradeEntry" type="PanelContainer"]
margin_right = 490.0
margin_bottom = 59.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Body" type="HBoxContainer" parent="."]
margin_right = 490.0
margin_bottom = 55.0

[node name="SepL" type="VSeparator" parent="Body"]
margin_right = 4.0
margin_bottom = 55.0
custom_styles/separator = SubResource( 2 )

[node name="UpgradeColumn" type="VBoxContainer" parent="Body"]
margin_left = 8.0
margin_right = 128.0
margin_bottom = 55.0
custom_constants/separation = 2

[node name="Name" type="Label" parent="Body/UpgradeColumn"]
margin_right = 120.0
margin_bottom = 13.0
rect_min_size = Vector2( 60, 0 )
text = "Grip"
align = 1

[node name="TierIcon" type="TextureRect" parent="Body/UpgradeColumn"]
margin_top = 15.0
margin_right = 120.0
margin_bottom = 33.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Sprite" type="Sprite" parent="Body/UpgradeColumn/TierIcon"]
position = Vector2( 60, 9 )
texture = ExtResource( 4 )
hframes = 4

[node name="Blue" type="Position2D" parent="Body/UpgradeColumn/TierIcon/Sprite"]
position = Vector2( -15, -4 )

[node name="Purple" type="Position2D" parent="Body/UpgradeColumn/TierIcon/Sprite"]
position = Vector2( 0, -4 )

[node name="Gold" type="Position2D" parent="Body/UpgradeColumn/TierIcon/Sprite"]
position = Vector2( 16, -4 )

[node name="UpgradeButton" type="Button" parent="Body/UpgradeColumn"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 4
text = "Upgrade (100g)"

[node name="SepM" type="VSeparator" parent="Body"]
margin_left = 132.0
margin_right = 136.0
margin_bottom = 55.0
custom_styles/separator = SubResource( 2 )

[node name="TextColumn" type="VBoxContainer" parent="Body"]
margin_left = 140.0
margin_right = 490.0
margin_bottom = 55.0
size_flags_horizontal = 3
alignment = 1

[node name="Description" type="Label" parent="Body/TextColumn"]
margin_top = 2.0
margin_right = 350.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/normal = SubResource( 3 )
text = "Increases the maximum number of fish on your hook by:"

[node name="Values" type="RichTextLabel" parent="Body/TextColumn"]
margin_top = 19.0
margin_right = 350.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 16 )
custom_styles/normal = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[u]Under[/u]LINE
"
text = "UnderLINE
"
scroll_active = false

[node name="Flavor" type="Label" parent="Body/TextColumn"]
margin_top = 39.0
margin_right = 350.0
margin_bottom = 52.0
text = "\"Everything needs Flavortext to look polished\" - Some wise man"
align = 1

[connection signal="pressed" from="Body/UpgradeColumn/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
